--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+hr {
+    color: white;
+}
+
 .input-login {
     width: 100%;
     height: 2.5rem;
@@ -99,10 +103,6 @@ ul > a {
     font-size: 1.2rem;
 }
 
-hr {
-    color: white;
-}
-
 .fa-user-circle {
     color: white;
     font-size: 2rem;
@@ -128,3 +128,68 @@ hr {
     font-size: 2.5rem;
 }
 
+.title {
+    text-align: center;
+    padding: 2rem 0 1rem;
+    font-weight: bold;
+}
+
+.img-receita {
+    max-width: 100%;
+    max-height: auto;
+}
+
+.carousel-item {
+    height: 200px;
+    width: 100%;
+}
+
+.carousel {
+    padding-bottom: 1rem;
+}
+
+.navbar {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.card-exercicios,
+.card-text,
+.text-muted {
+    background-color: #f5c000;
+    color: white;
+}
+
+.video-exercicio {
+    width: 100%;
+    height: auto;
+    padding-top: 1rem;
+}
+
+.btn-link {
+    text-decoration: none;
+    list-style: none;
+    color: black;
+    font-weight: bold;
+}
+
+.btn-link:hover {
+    text-decoration: none;
+    text-emphasis: none;
+    color: black;
+}
+
+.card-header {
+    background-color: #87cefa;
+}
+
+.card-body > a {
+    color: black !important;
+}
+
+footer {
+    padding: 0.8rem 0.5rem;
+    background-color: rgb(0, 157, 255);
+    margin-top: 2rem;
+    color: white;
+}
