--- a/Codigo/css/style-medicao.css
+++ b/Codigo/css/style-medicao.css
@@ -23,8 +23,16 @@
 }
 
 .task-input {
-    width: 100%;
+    width: 35%;
     padding: 15px; 
+    border-radius: 10px;
+    margin: 0;
+    float: left;
+}
+
+.datetime-input {
+    width: 65%;
+    padding: 15px;
     border-radius: 10px;
     margin: 0;
 }
@@ -36,6 +44,7 @@
 .error {
     color: red;
     padding: 5px;
+    text-align: center;
 }
 
 #buttonAdd {
@@ -43,7 +52,6 @@
 }
 
 .btn_acessar:hover {
-    transform: scale(1.05);
     cursor: pointer;
 }
 
