Update login and cadastro

--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -17,6 +17,15 @@ hr {
     height: 2.5rem;
 }
 
+.input-tipo {
+    width: 103%;
+    height: 2.5rem;
+}
+
+.nome-tipo {
+    color: 
+}
+
 .logo {
     color: #87cefa;
     font-size: 8rem;
