--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -69,7 +69,7 @@ hr {
     padding: 0 2rem;
 }
 
-.social-media>a {
+.social-media > a {
     text-decoration: none;
     color: rgb(0, 157, 255);
     font-size: 2rem;
@@ -96,8 +96,8 @@ hr {
     background-color: rgb(0, 157, 255);
 }
 
-.bg-navbar>ul,
-ul>a {
+.bg-navbar > ul,
+ul > a {
     list-style-type: none;
     color: white !important;
     font-size: 1.2rem;
@@ -139,7 +139,7 @@ ul>a {
     text-align: center;
     padding: 2rem 0 1rem;
     font-weight: bold;
-    color: black;
+    color: rgb(0, 157, 255);
 }
 
 .img-receita {
@@ -148,12 +148,24 @@ ul>a {
 }
 
 .carousel-item {
-    height: 200px;
+    height: 290px;
     width: 100%;
 }
 
 .carousel {
-    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+
+.receita-title > a {
+    color: black !important;
+    text-decoration: underline;
+}
+
+.text-mais {
+    font-size: 1.2rem;
+    padding: 1rem;
+    color: black;
+    text-align: justify;
 }
 
 .navbar {
@@ -164,7 +176,7 @@ ul>a {
 .card-exercicios,
 .card-text,
 .text-muted {
-    background-color: #f5c000;
+    background-color: #363636;
     color: white;
 }
 
@@ -191,7 +203,7 @@ ul>a {
     background-color: #87cefa;
 }
 
-.card-body>a {
+.card-body > a {
     color: black !important;
 }
 
@@ -204,4 +216,31 @@ footer {
     background-color: rgb(0, 157, 255);
     margin-top: 2rem;
     color: white;
+}
+
+@media screen and (min-width:768px) {
+    .img-receita {
+        min-width: 100%;
+        max-height: auto;
+    }
+    .carousel-item {
+        height: 530px;
+        min-width: fit-content;
+    }
+    .card-group {
+        padding-bottom: 2rem;
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .img-receita {
+        max-width: 100%;
+        height: auto;
+    }
+    .carousel-item {
+        height: 630px;
+    }
+    section {
+        margin: 0 3rem;
+    }    
 }
