--- a/Codigo/css/style-medicao.css
+++ b/Codigo/css/style-medicao.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 .container {
@@ -111,9 +110,10 @@
     border-radius: 5px;
     padding: 10px;
     color: black;
-    font-weight: bold;
     margin-top: 15px;
     cursor: pointer;
+    font-weight: lighter;
+    font-size: 1rem !important;
 }
 
 .button-check-all:hover {
@@ -128,10 +128,11 @@
     border-radius: 5px;
     padding: 10px;
     color: black;
-    font-weight: bold;
+    font-weight: lighter;
     margin-top: 15PX;
     cursor: pointer;
     margin-right: 1rem;
+    font-size: 1rem !important;
 }
 
 .delete-all:hover {
