--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -18,7 +18,7 @@ hr {
 }
 
 .input-tipo {
-    width: 103%;
+    width: 100%;
     height: 2.5rem;
 }
 
@@ -295,6 +295,18 @@ ul > a {
     text-align: justify;
     font-size: 1.2rem;
     margin: 1rem;
+}
+
+.troca-foto {
+    align-items: center;
+    font-size: 0.8rem;
+    margin: 0 1rem 2rem;
+}
+
+.text-foto {
+    font-size: 1rem;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 footer {
